<resources>
    <string name="app_name">Morepork</string>
    <string name="play">Play</string>
    <string name="help">Help</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="difficulty">Difficulty</string>
    <string name="home">Home</string>
    <string name="play_again">Play Again</string>
    <string name="high_score">High Score: %1$s</string>
    <string name="your_score">Your Score: %1$s</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->
    <string name="support">Support</string>
    <string name="report_issues">Report technical issues or suggest new features</string>
    <string name="send_feedback">Send feedback</string>
    <string name="dev_email" translatable="false">moreporkapp@gmail.com</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="game_over">Game Over</string>
    <string name="sound_level_limit">Sound level limit</string>
    <string name="sound_level">Sound level</string>
    <string name="test_sound_level">Test sound level</string>
    <string name="share_score">Share score</string>
    <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=nz.co.olliechick.morepork</string>
    <string name="share_text">I got a score of %1$s on %2$s! Can you beat it?</string>
    <string name="allow_app_audio_for_game">You will need to allow the app to record audio to play the game.</string>
    <string name="allow_app_audio_for_settings">You will need to allow the app to record audio to test your sound level.</string>
    <string name="loading">Loading…</string>
    <string name="current_sound_level">Current sound level</string>
    <string name="help_url" translatable="false">https://docs.google.com/document/d/1p9o2-fDhx2gYimRF4TkAfh5I9CPeMrvjpM7GsClGvqA/edit?usp=sharing</string>
    <string name="ok">OK</string>
    <string name="how_loud">How loud the sound has to be before Porky moves up</string>

</resources>
