<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>

        <ListPreference
                app:key="difficulty"
                app:title="@string/difficulty"
                app:entries="@array/difficulty_entries"
                app:entryValues="@array/difficulty_values"
                app:defaultValue="300"
                app:useSimpleSummaryProvider="true"/>

        <ListPreference
                app:key="theme"
                app:title="@string/theme"
                app:entries="@array/theme_entries"
                app:entryValues="@array/theme_values"
                app:defaultValue="light"
                app:useSimpleSummaryProvider="true"/>

        <SeekBarPreference
                android:title="@string/sound_level_limit"
                android:key="sound_level_limit"
                android:summary="How loud the sound has to be before Porky moves up"
                app:showSeekBarValue="true"
                app:seekBarIncrement="100"
                android:defaultValue="@integer/default_sound_level"
                android:min="@integer/min_sound_level"
                android:max="@integer/max_sound_level"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:key="support"
            app:title="@string/support">

        <Preference
                app:key="feedback"
                app:summary="@string/report_issues"
                app:title="@string/send_feedback"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
