<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/difficulty"
                android:layout_width="347dp"
                android:layout_height="wrap_content" android:id="@+id/difficulty_textview" android:layout_weight="1"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/difficulty_spinner" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/theme_textview" android:layout_weight="1"/>
        <ToggleButton
                android:layout_width="111dp"
                android:layout_height="38dp" android:id="@+id/theme_toggle" android:layout_weight="1"
                android:textOff="@string/light" android:textOn="@string/dark"/>
    </LinearLayout>
</LinearLayout>
