<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameOverActivity">

    <Button
            android:text="@string/play_again"
            android:layout_width="125dp"
            android:layout_height="70dp"
            android:id="@+id/play_again_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:layout_marginTop="8dp" android:textSize="20sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.64"
            android:layout_marginEnd="60dp" app:layout_constraintEnd_toStartOf="@+id/share_button"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/home"
            android:layout_width="125dp"
            android:layout_height="70dp"
            android:id="@+id/home_button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.642" app:layout_constraintStart_toEndOf="@+id/share_button"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/game_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/title" android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.499"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.56"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.71" android:id="@+id/guideline"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="553dp"
            android:layout_height="64dp"
            android:id="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/share_button" app:layout_constraintHorizontal_bias="0.6">
        <TextView
                android:layout_width="8dp"
                android:layout_height="match_parent" android:id="@+id/your_score_label" android:layout_weight="1"
                android:textAlignment="center" android:textSize="24sp"/>
        <TextView
                android:layout_width="8dp"
                android:layout_height="match_parent" android:id="@+id/high_score_label" android:layout_weight="1"
                android:textAlignment="center" android:textSize="24sp"/>
    </LinearLayout>
    <Button
            android:text="@string/share_score"
            android:layout_width="125dp"
            android:layout_height="75dp"
            android:id="@+id/share_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/home_button"
            android:layout_marginEnd="60dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintVertical_bias="0.64"
            app:layout_constraintStart_toEndOf="@+id/play_again_button" app:layout_constraintHorizontal_bias="0.5"
    />

</androidx.constraintlayout.widget.ConstraintLayout>